--- a/MyPortfolio/index.html
+++ b/MyPortfolio/index.html
@@ -10,14 +10,77 @@
 </head>
 <body>
   <header>
-    <!-- 画像や文字を中央揃えにしたい -->
     <div class="container">
-      <img src="img/taro.png" alt="太郎のアイコン"
-           width="120"
-           height="120">
-      <h1>山田太郎</h1>
-      <p>UI/UXデザイナー見習いです</p>
+      <div>
+        <img
+          src="img/taro.png"
+          alt="太郎のアイコン"
+          width="120"
+          height="120"
+          class="icon">
+      </div>
+      <div>
+        <h1>山田太郎</h1>
+        <p>UI/UXデザイナー見習いです</p>
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="img/blog.png"
+                alt="ブログアイコン"
+                width="20"
+                height="20">
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="img/photos.png"
+                alt="写真アイコン"
+                width="20"
+                height="20">
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </header>
+
+  <main>
+    <div class="container">
+      <h1>WORKS</h1>
+        <section>
+          <img 
+            src="img/work1.png"
+            alt="勇者ゲーム"
+            width="400"
+            height="225">
+          <h2>勇者ゲーム</h2>
+          <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+        </section>
+        <section>
+          <img 
+            src="img/work2.png"
+            alt="宝探しゲーム"
+            width="400"
+            height="225">
+          <h2>宝探しゲーム</h2>
+          <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+        </section>
+        <section>
+          <img 
+            src="img/work3.png"
+            alt="神経衰弱ゲーム"
+            width="400"
+            height="225">
+          <h2>神経衰弱ゲーム</h2>
+          <p>すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。すごいゲームです。</p>
+        </section>
+
+    </div>
+  </main>
+
+  <footer>
+    <small>(c) dotinstall.com</small>
+  </footer>
 </body>
-</html>
