--- a/JavaScript/JavaScript_Basic/index.html
+++ b/JavaScript/JavaScript_Basic/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>JavaScript Basics</title>
 </head>
 <body>
-  'use strict';
 
-  console.log('Hello World!');
+  <script>
+    'use strict';
+
+    console.log('Hello world!');
+    console.log('Hello world again!');
+  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
