--- a/JavaScript/JavaScript_Basic/index.html
+++ b/JavaScript/JavaScript_Basic/index.html
@@ -5,6 +5,10 @@
   <title>JavaScript Basics</title>
 </head>
 <body>
+  <h1 id="target">ドットインストール</h1>
+  <p>こんにちは。こんにちは。こんにちは。</p>
+  <p>こんにちは。こんにちは。こんにちは。</p>
+  <p>こんにちは。こんにちは。こんにちは。</p>
 
   <script src="js/main.js"></script>
 </body>
