--- a/JavaScript/JavaScript_Basic/index.html
+++ b/JavaScript/JavaScript_Basic/index.html
@@ -5,9 +5,7 @@
   <title>JavaScript Basics</title>
 </head>
 <body>
-  <textarea>
-    
-  </textarea>
+  <textarea></textarea>
   <script src="js/main.js"></script>
 </body>
 </html>
