--- a/JavaScript/JavaScript_Basic/index.html
+++ b/JavaScript/JavaScript_Basic/index.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="utf-8">
   <title>JavaScript Basics</title>
+  <style>
+    li {
+      cursor: pointer;
+    }
+    li.done {
+      text-decoration: line-through;
+    }
+  </style>
 </head>
 <body>
-  <form>
-    <input type="text">
-    <button>Post</button>
-  </form>
+  <ul> <!-- e.currentTarget -->
+    <li>Todo</li>
+    <li>Todo</li> <!-- e.target -->
+    <li>Todo</li>
+  </ul>
+  
   <script src="js/main.js"></script>
 </body>
 </html>
