--- a/JavaScript/My_StopWatch/index.html
+++ b/JavaScript/My_StopWatch/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+  <div id="timer">00:00.000</div>
+  <button id="start">Start</button>
+  <button id="start">Stop</button>
+  <button id="start">Reset</button>
   
   <script src="js/main.js"></script>
 </body>
