--- a/JavaScript/My_StopWatch/index.html
+++ b/JavaScript/My_StopWatch/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Stopwatch</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="timer">00:00.000</div>
-  <button id="start">Start</button>
-  <button id="stop">Stop</button>
-  <button id="reset">Reset</button>
+  <div class="container">
+    <div id="timer">00:00.000</div>
+    <div class="btn" id="start">Start</div>
+    <div class="btn" id="stop">Stop</div>
+    <div class="btn" id="reset">Reset</div>
+  </div>
 
   <script src="js/main.js"></script>
 </body>
