--- a/JavaScript/My_NumbersGame/index.html
+++ b/JavaScript/My_NumbersGame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Numbers Game</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -9,14 +9,9 @@
   <div id="container">
     <div id="timer">0.0</div>
     <ul id="board">
-      <li class="pressed">0</li>
-      <li>1</li>
-      <li>2</li>
-      <li>3</li>
     </ul>
     <div id="btn">START</div>
   </div>
-  
   <script src="js/main.js"></script>
 </body>
 </html>
