--- a/JavaScript/My_Firebase/index.html
+++ b/JavaScript/My_Firebase/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>My_Firebase</title>
+  <title>My_Firebase_ChatApp</title>
 </head>
 <body>
   Chat App
