--- a/JavaScript/My_Firebase/index.html
+++ b/JavaScript/My_Firebase/index.html
@@ -6,5 +6,26 @@
 </head>
 <body>
   Chat App
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCRa4UtwZ0MwnQbXo4lgq6L1HUV7-1V2pY",
+  authDomain: "my-firebase-chatapp-1eeaa.firebaseapp.com",
+  projectId: "my-firebase-chatapp-1eeaa",
+  storageBucket: "my-firebase-chatapp-1eeaa.appspot.com",
+  messagingSenderId: "916680053119",
+  appId: "1:916680053119:web:7e8b7768eaadb98db18a4a",
+  measurementId: "G-54XK8CYZ8B"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 </body>
 </html>
